	permutations = 0.
	* merge r2097: add print.summary.simper.
	* merge r2089: scores.default fixed with non-existing scores.
	* merge r2080: use droplevels in betadisper.
	* merge r2078,2084: simper NAMESPACE.
	* merge r2079: do not use .Internal().
	* merge r2071,2: dimnames fix in indopower & expand example.
	* merge r2068: broken url in renyi.Rd.
	* merge r2060: adonis tells terms were added sequentially.
	* mrege r2057: add .Rinstignore to silense R 2.15.0 checks.
	* merge r2056: use inconsolata fonts in vignettes.
	* merge r2053: implement adjusted R2 for partial RDA.
	* merge r2052: do not scale constraints in varpart[234].
	* merge r2049: capscale robust for zeroed centroids.
	* merge r2044: ordistep robust for complete aliasing.
	* merge r2043: anova.ccabymargin robust for zero effects.
	* merge r2035,6,7: more robust plot.cca.
	* merge r2030: resurrect old ChangeLog entries.
	* merge r2027,28,33: tweak oecosimu printed output.
	* merge r2018,19,21: add nestedbetasor() & nestedbetajac().
	* merge r2016: empty factor levels in betadisper() fixed in
	ordimedian(). 
	* merge r2015: remove Bob O'Hara's old email address.
	* merge r2008,9,11,12: add rarecurve.
	* merge r2007: FAQ update for arrow scaling.
	* merge r2004: metaMDS(..., noshare=0) triggers stepacross(), but
	'noshare = FALSE' never does.
	* merge r2001: explain scaling of arrows in envfit() plot() --
	this looks like being a FAQ.

Version 2.0-2 (opened October 20, 2011)

	* merge r1991 by hand: change sapply(H.s t) to use lapply in adonis
	to fix a further bug in implementing speed-ups in f.test
	* merge r1988 by hand: calling f.test without transposed matrix
	bug in adonis.
	* merge r1985: ordiarrows, ordisegments gained arg 'order.by'.
	* merge r1974,1975,1980,1982: FAQ update.
	* merge r1970: ordispider returns invisible plotting structure.
	* merge r1969: ordiplot3d.Rd tells about xyz.convert().
	* merge r1964: clarify stress scaling in iso/monoMDS.