@@ -89,6 +89,11 @@ as synonymous with <code>noshare = FALSE</code> which always
 suppresses extended dissimilarities.
 </p>
 </li>
+<li><p> Nestedness discrepancy index <code>nesteddisc</code> gained a
+new argument that allows user to set the number of iterations
+in optimizing the index.
+</p>
+</li>
 <li> <p><code>oecosimu</code> displays the mean of simulations and
 describes alternative hypothesis more clearly in the printed
 output. 
