@@ -27,6 +27,7 @@ Version 2.0-3 (opened November 13, 2011)
 	* merge r2079: do not use .Internal().
 	* merge r2071,2: dimnames fix in indopower & expand example.
 	* merge r2068: broken url in renyi.Rd.
+	* merge r2065: number of iterations is an arguent in nesteddisc.
 	* merge r2060: adonis tells terms were added sequentially.
 	* mrege r2057: add .Rinstignore to silense R 2.15.0 checks.
 	* merge r2056: use inconsolata fonts in vignettes.
